@@ -1,6 +1,7 @@
 == 2.7.1 ==
 Release date: December 9, 2022
 * Enhancement: Updated Elementor compatibility tags
+* Enhancement: Info Box Carousel - Box link structure
 * Fixed: Gravity Forms - Use Ajax was not working
 * Fixed: Random Image - Image alt was not printing on the page
 
